* Decidir: Add support for network tokens [almalee24] #4870
* Element: Fix credit card name bug [almalee24] #4898
* Adyen: Add payout endpoint [almalee24] #4885
* Adding Oauth Response for access tokens [almalee24] #4851
* CheckoutV2: Update stored credentials [almalee24] #4901
* Revert "Adding Oauth Response for access tokens" [almalee24] #4906
* Adyen: Fix shopperEmail bug [almalee24] #4904
* Add Cabal card bin ranges [yunnydang] #4908
* Kushki: Fixing issue with 3DS info on visa cc [heavyblade] #4899
* Adyen: Add MIT flagging for Network Tokens [aenand] #4905
* Moneris: Update sca actions [almalee24] #4902
* Ogone: Add gateway specific 3ds option with default options mapping [jherreraa] #4894
* Rapyd: Add recurrence_type field [yunnydang] #4912
* Revert "Adyen: Update MIT flagging for NT" [almalee24] #4914

== Version 1.135.0 (August 24, 2023)
* PaymentExpress: Correct endpoints [steveh] #4827
* Adyen: Add option to elect which error message [aenand] #4843
* Reach: Update list of supported countries [jcreiff] #4842
* Paysafe: Truncate address fields [jcreiff] #4841
* Braintree: Support third party Network Tokens [aenand] #4775
* Kushki: Fix add amount default method for subtotalIva and subtotalIva0 [yunnydang] #4845
* Rapyd: Add customer object to requests [aenand] #4838
* CyberSource: Add merchant_id [almalee24] #4844
* Global Collect: Add agent numeric code and house number field [yunnydang] #4847
* Deepstack: Add Deepstack Gateway [khoinguyendeepstack] #4830
* Braintree: Additional tests for credit transactions [jcreiff] #4848
* Rapyd: Change nesting of description, statement_descriptor, complete_payment_url, and error_payment_url [jcreiff] #4849
* Rapyd: Add merchant_reference_id [jcreiff] #4858
* Braintree: Return error for ACH on credit [jcreiff] #4859
* Rapyd: Update handling of ewallet and billing address phone [jcreiff] #4863
* IPG: Change credentials inputs to use a combined store and user ID string as the user ID input [kylene-spreedly] #4854